--- a/roles/vmware_exporter/handlers/main.yml
+++ b/roles/vmware_exporter/handlers/main.yml
@@ -1,6 +1,10 @@
 ---
 
+- name: reload systemd
+  systemd:
+    daemon_reload: true
+
 - name: restart vmware exporter
   systemd:
-    name: "container-{{ vmware_exporter_container_name }}"
+    name: vmware_exporter
     state: restarted
