Use gopass for vault and ca password

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,10 +2,13 @@
 roles_path = roles
 inventory = hosts,kubespray/inventory/vsphere/inventory.ini
 filter_plugins = filter_plugins
-vault_password_file = .secrets/vault_key
+vault_password_file = gopass-vault.sh
 library = ./library
 host_key_checking = False
 force_handlers = True
 
 [inventory]
 enable_plugins = vmware_vm_inventory,ini
+
+[passwordstore_lookup]
+backend = gopass
