--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -12,7 +12,7 @@ my_email: "{{ vault_my_email }}"
 node_exporter_port: 9100
 
 cert_path: "{{ inventory_dir }}/files/all/elk_ssl"
-ca_pass: "{{ lookup('file', inventory_dir + '/.secrets/ca_key').strip() }}"
+ca_pass: "{{ lookup('community.general.passwordstore', 'ansible/ca_pass')}}"
 
 locale_gen:
   - "en_US.UTF-8"
