--- a/roles/certbot/defaults/main.yml
+++ b/roles/certbot/defaults/main.yml
@@ -11,6 +11,12 @@ certbot_credentials_content: ""
 certbot_generate_command: ""  # excluding -d
 certbot_domains: []
   # - "example.com,*.example.com"
+certbot_renew_hooks: []
+  # - name: restart-nginx
+  #   type: deploy
+  #   content: |
+  #     #/bin/sh
+  #     systemctl restart nginx
 
 __certbot_venv_update_pre: "{{ certbot_venv_path }}/bin/pip install --upgrade pip setuptools wheel"
 __certbot_venv_update: "{{ certbot_venv_path }}/bin/pip install --upgrade {{ (certbot_pkgs + certbot_extra_pkgs) | join(' ') }}"
