--- a/group_vars/webgw/nginx/vhosts.yml
+++ b/group_vars/webgw/nginx/vhosts.yml
@@ -1,6 +1,6 @@
 ---
 
-nginx_vhosts:
+__nginx_vhosts_common:
   - filename: gitlab.conf
     server_name: gitlab
     template: "{{ inventory_dir }}/files/webgw/nginx/gitlab.conf.j2"
@@ -21,8 +21,11 @@ nginx_vhosts:
     server_name: plex
     template: "{{ inventory_dir }}/files/webgw/nginx/plex.conf.j2"
 
+__nginx_vhosts_host:
   - filename: nextcloud_ta.conf
     server_name: nextcloud_ta
     upstream_name: nextcloud_ta
     domain: "{{ domains[5] }}"
     template: "{{ inventory_dir }}/files/webgw/nginx/nextcloud.conf.j2"
+
+nginx_vhosts: "{{ (__nginx_vhosts_common | default([])) + (__nginx_vhosts_host | default([])) }}"
