--- a/host_vars/romgw01/wireguard.yml
+++ b/host_vars/romgw01/wireguard.yml
@@ -9,6 +9,11 @@ wireguard_addresses:
 wireguard_mt_allowed_ips:
   - "{{ hostvars['mt-router'].wireguard_ip }}/32"
   - "{{ hostvars['loki01'].ansible_host }}/32"
+  - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
+
+wireguard_webgw_allowed_ips:
+  - "{{ hostvars['webgw01'].wireguard_ip }}/32"
+  - "{{ hostvars['webgw01'].wireguard_ipv6 }}/128"
 
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
@@ -23,5 +28,5 @@ wireguard_unmanaged_peers:
     public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
   webgw:
     endpoint: "{{ hostvars['webgw01'].wireguard_endpoint }}"
-    allowed_ips: "{{ hostvars['webgw01'].wireguard_ip }}/32"
+    allowed_ips: "{{ wireguard_webgw_allowed_ips | join(', ') }}"
     public_key: "{{ hostvars['webgw01'].wireguard_public_key }}"
