--- a/playbooks/webgw.yml
+++ b/playbooks/webgw.yml
@@ -226,15 +226,15 @@
             state: disabled
           notify: reload firewalld
 
-        - name: Add http and https to public zone
+        - name: Allow http and https
           firewalld:
-            zone: "public"
-            service: "{{ item }}"
+            zone: "{{ item.0 }}"
+            service: "{{ item.1 }}"
             permanent: true
             state: enabled
-          loop:
-            - "http"
-            - "https"
+          with_nested:
+            - "{{ firewalld_http_zones | default(['public']) }}"
+            - ["http", "https"]
           notify: reload firewalld
 
         - name: Enable masquerade on configured zones
