--- a/host_vars/romgw01/nginx.yml
+++ b/host_vars/romgw01/nginx.yml
@@ -5,9 +5,19 @@ nginx_upstreams:
     servers: ["{{ hostvars['romsto'].ansible_host }}:{{ hostvars['romsto'].nextcloud_port }}"]
     keepalive: 16
 
+  - name: photoprism_ta
+    servers: ["{{ hostvars['romsto'].ansible_host }}:2342"]
+    keepalive: 16
+
 nginx_vhosts:
   - filename: nextcloud.conf
     server_name: nextcloud
     upstream_name: nextcloud_ta
     domain: "{{ domains[5] }}"
     template: "{{ inventory_dir }}/files/webgw/nginx/nextcloud.conf.j2"
+
+  - filename: photoprism.conf
+    server_name: photoprism
+    upstream_name: photoprism_ta
+    domain: "{{ domains[5] }}"
+    template: "{{ inventory_dir }}/files/webgw/nginx/photoprism.conf.j2"
