--- a/group_vars/nextcloud/vars.yml
+++ b/group_vars/nextcloud/vars.yml
@@ -10,14 +10,14 @@ provisioned_disks:
 
 nextcloud_port: 443
 nextcloud_proxies: "{{ proxy_hosts }}"
-nextcloud_domain: "nextcloud.{{ hostvars['webgw01'].domains[1] }}"
+nextcloud_domain: "nextcloud.{{ domains['dv'] }}"
 nextcloud_server_name: "{{ nextcloud_domain }}"
 
 webgw_ports:
   - "{{ nextcloud_port }}"
 
 nextcloud_generate_certificate: true
-nextcloud_certificate_cn: "{{ inventory_hostname }}.vm.{{ hostvars['webgw01'].domains[1] }}"
+nextcloud_certificate_cn: "{{ inventory_hostname }}.vm.{{ domains['dv'] }}"
 nextcloud_certificate_alt_name:
   - "DNS:{{ ansible_host }}"
   - "DNS:{{ ansible_hostname }}"
