--- a/host_vars/truenas-certbot/certbot.yml
+++ b/host_vars/truenas-certbot/certbot.yml
@@ -7,7 +7,7 @@ certbot_email: "{{ hostvars['webgw01'].vault_certbot_email }}"
 certbot_pkgs: ["certbot"]
 certbot_extra_pkgs: ["certbot-dns-hetzner"]
 certbot_domains:
-  - "truenas.{{ hostvars['webgw01'].domains[1] }}"
+  - "truenas.{{ domains['hb'] }}"
 certbot_credentials_path: "/etc/letsencrypt/hetzner.ini"
 certbot_credentials_content: "{{ hostvars['webgw01'].certbot_credentials_content }}"
 
