--- a/group_vars/prom/grafana.yml
+++ b/group_vars/prom/grafana.yml
@@ -3,7 +3,7 @@
 grafana_admin_pass: "{{ vault_grafana_admin_pass }}"
 grafana_admin_user: "{{ vault_grafana_admin_user }}"
 grafana_psql_pass: "{{ vault_grafana_psql_pass }}"
-grafana_domain: "grafana.{{ hostvars['webgw01'].domains[1] }}"
+grafana_domain: "grafana.{{ domains['hb'] }}"
 grafana_url: "https://{{ grafana_domain }}/"
 grafana_instance: "localhost"
 grafana_address: "0.0.0.0"
