--- a/host_vars/drepi/ufw.yml
+++ b/host_vars/drepi/ufw.yml
@@ -1,14 +1,15 @@
 ---
 
+ufw_ipv6_enabled: false
 ufw_trusted_sources:
   - "{{ hostvars['desktop'].ansible_host }}"
   - "{{ hostvars['laptop'].ansible_host }}"
+  - "{{ hostvars['laptop'].wireguard_ip }}"
+  - "{{ hostvars['m1bp'].wireguard_ip }}"
 
 ufw_local_rules:
     - { port: "22", proto: "tcp" }     # SSH
     - { port: "8081", proto: "tcp" }   # Motion
-    - { port: "137", proto: "udp" }    # SMB client
-    - { port: "138", proto: "udp" }    # SMB client
     - { port: "2049", proto: "udp" }   # NFS client
     - { port: "2049", proto: "tcp" }   # NFS client
     - { port: "{{ node_exporter_port }}", proto: "tcp", src: "{{ home_net.general.cidr }}" }  # node - general
