--- a/roles/hostname/tasks/main.yml
+++ b/roles/hostname/tasks/main.yml
@@ -1,13 +1,20 @@
 ---
 
-- name: Set hostname (1/2)
-  hostname:
+- name: Set hostname
+  ansible.builtin.hostname:
     name: "{{ hostname }}"
 
-- name: Set hostname (2/2)
-  copy:
-    content: "{{ hostname }}{{'\n'}}"
+- name: Configure /etc/hostname
+  ansible.builtin.copy:
+    content: "{{ hostname }}{{ '\n' }}"
     dest: /etc/hostname
     owner: root
     group: root
     mode: 0644
+
+- name: Set hostname in /etc/hosts  # noqa no-tabs
+  ansible.builtin.lineinfile:
+    dest: /etc/hosts
+    regexp: '^#?127\.0\.1\.1'
+    line: "127.0.1.1\t{{ hostname }}"
+  when: hostname_configure_etc_hosts
