--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -8,8 +8,8 @@
   tasks:
     # Set up ssh
     # https://github.com/hannseman/ansible-raspbian
-    - name: add SSH keys
-      authorized_key:
+    - name: Add SSH keys
+      ansible.posix.authorized_key:
         user: "{{ ansible_user }}"
         key: "{{ item }}"
         state: present
@@ -30,181 +30,96 @@
   vars:
     system_timezone: "Europe/Oslo"
     system_locale: "en_US.UTF-8"
-    motion_smb_cred_file: "/etc/samba/credentials/motion"
-  handlers:
-    - name: reload firewalld
-      become: true
-      service:
-        name: firewalld
-        state: reloaded
-
-    - name: restart firewalld
-      become: true
-      service:
-        name: firewalld
-        state: restarted
-
-    - name: reboot
-      become: true
-      reboot: {}
-
-    - name: update-locale
-      become: true
-      command: "/usr/sbin/update-locale LANG={{ system_locale }}"
-
-    - name: enable and start daily reboot timer
-      become: true
-      systemd:
-        name: sched-reboot.timer
-        state: started
-        enabled: true
-
   pre_tasks:
     - name: Run common role
       become: false
-      import_role:
+      ansible.builtin.import_role:
         name: common
       tags: ["always"]
 
     - name: Gather facts
-      setup:
+      ansible.builtin.setup:
       tags: ["always"]
 
-    - name: Ensure camera is enabled
-      become: true
-      lineinfile:
-        dest: "/boot/config.txt"
-        regexp: "{{ item.regexp }}"
-        line: "{{ item.line }}"
-        state: present
-      notify: reboot
-      with_items:
-        - regexp: "^#?start_x"
-          line: "start_x=1"
-        - regexp: "^#?gpu_mem"
-          line: "gpu_mem=128"
+    - name: Configure motion
+      block:
+        - name: Mount motion share
+          ansible.posix.mount:
+            src: "{{ hostvars['truenas'].local_ips.general }}:/mnt/tank/media/motion"
+            path: "/mnt/motion"
+            opts: "defaults,vers=4,rw,noatime,bg"
+            state: mounted
+            fstype: nfs
+
+        - name: Ensure camera is enabled
+          ansible.builtin.lineinfile:
+            dest: "/boot/config.txt"
+            regexp: "{{ item.regexp }}"
+            line: "{{ item.line }}"
+            state: present
+          notify: Reboot
+          with_items:
+            - regexp: "^#?start_x"
+              line: "start_x=1"
+            - regexp: "^#?gpu_mem"
+              line: "gpu_mem=128"
+
+        # NOTE: might need 'sudo rpi-update'
+        # - name: Ensure kernel module is loaded at boot
+        #   ansible.builtin.lineinfile:
+        #     dest: "/etc/modules-load.d/modules.conf"
+        #     regexp: "^#?bcm2835-v4l2"
+        #     line: "bcm2835-v4l2"
+        #     state: present
+        #   notify: Reboot
+
       tags: ["motion"]
 
-    # NOTE: might need 'sudo rpi-update'
-    # - name: Ensure kernel module is loaded at boot
-    #   become: true
-    #   lineinfile:
-    #     dest: "/etc/modules-load.d/modules.conf"
-    #     regexp: "^#?bcm2835-v4l2"
-    #     line: "bcm2835-v4l2"
-    #     state: present
-    #   notify: reboot
-    #   tags: ["motion"]
   tasks:
-    # locale
-    - block:
-      - name: set timezone
-        timezone:
-          name: "{{ system_timezone }}"
+    - name: Configure interactive shell stuff
+      block:
+        - name: Install vim
+          ansible.builtin.apt:
+            name: vim
+            state: present
 
-      - name: ensure locale exists
-        locale_gen:
-          name: "{{ system_locale }}"
-          state: present
-        notify: update-locale
+        - name: Configure bashrc
+          ansible.builtin.blockinfile:
+            path: /etc/bash.bashrc
+            block: |
+              export EDITOR=vim
+              alias ll='ls -lh'
+              alias la='ll -A'
 
-      - name: set default system locale
-        debconf:
-          name: 'locales'
-          question: 'locales/default_environment_locale'
-          vtype: 'string'
-          value: "{{ system_locale }}"
-        notify: update-locale
+      tags: ["bash", "vim"]
+
+    - name: Configure locale
+      block:
+        - name: Set timezone
+          ansible.builtin.timezone:
+            name: "{{ system_timezone }}"
+
+        - name: Ensure locale exists
+          ansible.builtin.locale_gen:
+            name: "{{ system_locale }}"
+            state: present
+          notify: Update locale
+
+        - name: Set default system locale
+          ansible.builtin.debconf:
+            name: 'locales'
+            question: 'locales/default_environment_locale'
+            vtype: 'string'
+            value: "{{ system_locale }}"
+          notify: Update locale
 
       tags: ["locale"]
-      become: true
-    # firewalld
-    - block:
-        - name: install firewalld and nftables
-          package:
-            name:
-              - firewalld
-              - nftables
-            state: present
-          tags: ["install"]
-
-        - name: configure firewalld to use nftables
-          lineinfile:
-            dest: "/etc/firewalld/firewalld.conf"
-            regexp: "^FirewallBackend"
-            line: "FirewallBackend=nftables"
-            state: present
-          notify: restart firewalld
-
-        - name: add interfaces to public zone
-          ansible.posix.firewalld:
-            zone: public
-            interface: "{{ item }}"
-            state: enabled
-            permanent: true
-          notify: reload firewalld
-          with_items:
-            - "eth0"
-            - "wlan0"
-
-        - name: ensure trusted is set to accept
-          ansible.posix.firewalld:
-            zone: trusted
-            target: "ACCEPT"
-            state: enabled
-            permanent: true
-          notify: reload firewalld
-
-        - name: add trusted sources
-          ansible.posix.firewalld:
-            zone: trusted
-            source: "{{ item }}"
-            state: enabled
-            permanent: true
-          notify: reload firewalld
-          with_items: "{{ firewalld_trusted_sources }}"
-
-        - name: add local network to home zone
-          ansible.posix.firewalld:
-            zone: home
-            source: "{{ ansible_default_ipv4.network }}/24"
-            state: enabled
-            permanent: true
-          notify: reload firewalld
-
-        - name: disallow ssh from public
-          ansible.posix.firewalld:
-            zone: public
-            service: ssh
-            state: disabled
-            permanent: true
-          notify: reload firewalld
-
-        - name: allow ssh from home
-          ansible.posix.firewalld:
-            zone: home
-            service: ssh
-            state: enabled
-            permanent: true
-          notify: reload firewalld
-
-        - name: start and enable firewalld
-          service:
-            name: firewalld
-            state: started
-            enabled: true
-
-      become: true
-      when: firewall_frontend == "firewalld"
-      tags: ["firewalld"]
 
   roles:
     - role: hostname
-      become: true
       tags: ["hostname"]
 
     - role: ufw
-      become: true
       when: firewall_frontend == "ufw"
       tags: ["ufw"]
 
@@ -218,58 +133,55 @@
       tags: ["unattended-upgrades"]
 
   post_tasks:
-    - block:
-      - name: Mount motion share
-        mount:
-          src: "{{ hostvars['truenas'].local_ips.general }}:/mnt/tank/media/motion"
-          path: "/mnt/motion"
-          opts: "defaults,vers=4,rw,noatime,bg"
-          state: mounted
-          fstype: nfs
-      become: true
-      tags: ["motion"]
-    - block:
-      - name: install mailx and postfix
-        apt:
-          name:
-            - bsd-mailx
-            - postfix
-            - libsasl2-modules
-          state: present
+    - name: Configure postfix
+      block:
+        - name: Install mailx and postfix
+          ansible.builtin.apt:
+            name:
+              - bsd-mailx
+              - postfix
+              - libsasl2-modules
+            state: present
 
-      # NOTE: manually run dpgk-reconfigure postfix
-      - name: configure postfix
-        lineinfile:
-          dest: "/etc/postfix/main.cf"
-          regexp: "{{ item.regexp }}"
-          line: "{{ item.line }}"
-          state: present
-        with_items:
-          - regexp: "^#?relayhost"
-            line: "relayhost = [{{ smtp_host }}]:{{ smtp_port }}"
-          - regexp: "^#?smtp_use_tls"
-            line: "smtp_use_tls = yes"
-          - regexp: "^#?smtp_sasl_auth_enable"
-            line: "smtp_sasl_auth_enable = yes"
-          - regexp: "^#?smtp_sasl_security_options"
-            line: "smtp_sasl_security_options ="
-          - regexp: "^#?smtp_sasl_password_maps"
-            line: "smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd"
-          - regexp: "^#?smtp_tls_CAfile"
-            line: "smtp_tls_CAfile = /etc/ssl/certs/ca-certificates.crt"
+        # NOTE: manually run dpgk-reconfigure postfix
+        - name: Configure postfix
+          ansible.builtin.lineinfile:
+            dest: "/etc/postfix/main.cf"
+            regexp: "{{ item.regexp }}"
+            line: "{{ item.line }}"
+            state: present
+          with_items:
+            - regexp: "^#?relayhost"
+              line: "relayhost = [{{ smtp_host }}]:{{ smtp_port }}"
+            - regexp: "^#?smtp_use_tls"
+              line: "smtp_use_tls = yes"
+            - regexp: "^#?smtp_sasl_auth_enable"
+              line: "smtp_sasl_auth_enable = yes"
+            - regexp: "^#?smtp_sasl_security_options"
+              line: "smtp_sasl_security_options ="
+            - regexp: "^#?smtp_sasl_password_maps"
+              line: "smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd"
+            - regexp: "^#?smtp_tls_CAfile"
+              line: "smtp_tls_CAfile = /etc/ssl/certs/ca-certificates.crt"
 
-      - name: configure postfix sasl_password
-        copy:
-          dest: /etc/postfix/sasl_passwd
-          owner: root
-          group: root
-          mode: 0600
-          content: |
-            [{{ smtp_host }}]:{{ smtp_port }}    {{ smtp_user }}:{{ smtp_pass }}
-        register: sasl_password
+        - name: Configure postfix sasl_password
+          ansible.builtin.copy:
+            dest: /etc/postfix/sasl_passwd
+            owner: root
+            group: root
+            mode: 0600
+            content: |
+              [{{ smtp_host }}]:{{ smtp_port }}    {{ smtp_user }}:{{ smtp_pass }}
+          register: sasl_password
 
-      - name: regenerate sasl_passwd.db
-        command: "/usr/sbin/postmap /etc/postfix/sasl_passwd"
-        when: sasl_password.changed
-      become: true
+        - name: Regenerate sasl_passwd.db
+          ansible.builtin.command: "/usr/sbin/postmap /etc/postfix/sasl_passwd"
+          when: sasl_password.changed
       tags: ["postfix"]
+
+  handlers:
+    - name: Reboot
+      ansible.builtin.reboot: {}
+
+    - name: Update locale
+      ansible.builtin.command: "/usr/sbin/update-locale LANG={{ system_locale }}"
