Integrate ufw role into firewall_config

--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -119,9 +119,8 @@
     - role: hostname
       tags: ["hostname"]
 
-    - role: ufw
-      when: firewall_frontend == "ufw"
-      tags: ["ufw"]
+    - role: firewall_config
+      tags: ["ufw", "firewall"]
 
     - role: motion
       tags: ["motion"]
