--- a/host_vars/dresrv/nginx/vhosts.yml
+++ b/host_vars/dresrv/nginx/vhosts.yml
@@ -1,6 +1,9 @@
 ---
 
 nginx_vhosts:
+  - filename: default_reject.conf
+    server_name: default_reject
+    template: "{{ inventory_dir }}/files/webgw/nginx/default_reject.conf.j2"
   - filename: admin.conf
     server_name: admin
     template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/admin.conf.j2"
