--- a/host_vars/romgw01/nginx.yml
+++ b/host_vars/romgw01/nginx.yml
@@ -10,6 +10,10 @@ nginx_upstreams:
     keepalive: 16
 
 nginx_vhosts:
+  - filename: default_reject.conf
+    server_name: default_reject
+    template: "{{ inventory_dir }}/files/webgw/nginx/default_reject.conf.j2"
+
   - filename: nextcloud.conf
     server_name: nextcloud
     upstream_name: nextcloud_ta
