--- a/host_vars/romgw01/nginx.yml
+++ b/host_vars/romgw01/nginx.yml
@@ -9,10 +9,20 @@ nginx_upstreams:
     servers: ["{{ hostvars['romsto'].ansible_host }}:2342"]
     keepalive: 16
 
+  - name: ha_ta
+    servers: ["{{ hostvars['romsto'].ansible_host }}:8123"]
+    keepalive: 16
+
 nginx_vhosts:
   - filename: default_reject.conf
     server_name: default_reject
     template: "{{ inventory_dir }}/files/webgw/nginx/default_reject.conf.j2"
+
+  - filename: ha.conf
+    server_name: ha
+    upstream_name: ha_ta
+    domain: "{{ domains['ti'] }}"
+    template: "{{ inventory_dir }}/files/webgw/nginx/ha.conf.j2"
 
   - filename: nextcloud.conf
     server_name: nextcloud
