--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -150,18 +150,92 @@
             line: "{{ item.line }}"
             state: present
           with_items:
+            - regexp: "^#?mydomain"
+              line: "mydomain = {{ domain }}"
+            - regexp: "^#?myhostname"
+              line: "myhostname = {{ inventory_hostname }}.{{ domain }}"
+            - regexp: "^#?myorigin"
+              line: "myorigin = $mydomain"
+            - regexp: "^#?relay_domains"
+              line: "relay_domains = {{ smtp_relay_domains | map(attribute='relay_host') | unique | join(', ') }}, {{ smtp_relay_domains | map(attribute='name') | join(', ') }}"
             - regexp: "^#?relayhost"
-              line: "relayhost = [{{ smtp_host }}]:{{ smtp_port }}"
+              line: "relayhost = [{{ smtp_relay_domains[0].relay_host }}]"
+            - regexp: "^#?sender_dependent_relayhost_maps"
+              line: "sender_dependent_relayhost_maps = hash:/etc/postfix/relayhost_map"
             - regexp: "^#?smtp_use_tls"
               line: "smtp_use_tls = yes"
             - regexp: "^#?smtp_sasl_auth_enable"
               line: "smtp_sasl_auth_enable = yes"
             - regexp: "^#?smtp_sasl_security_options"
-              line: "smtp_sasl_security_options ="
+              line: "smtp_sasl_security_options = noanonymous, noplaintext"
             - regexp: "^#?smtp_sasl_password_maps"
               line: "smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd"
             - regexp: "^#?smtp_tls_CAfile"
               line: "smtp_tls_CAfile = /etc/ssl/certs/ca-certificates.crt"
+            - regexp: "^#?smtp_pix_workarounds"
+              line: "smtp_pix_workarounds = delay_dotcrlf"
+            - regexp: "^#?smtp_sasl_mechanism_filter"
+              line: "smtp_sasl_mechanism_filter ="
+            - regexp: "^#?smtp_sasl_tls_security_options"
+              line: "smtp_sasl_tls_security_options = $smtp_sasl_security_options"
+            - regexp: "^#?smtp_sasl_type"
+              line: "smtp_sasl_type = cyrus"
+            - regexp: "^#?smtp_sender_dependent_authentication"
+              line: "smtp_sender_dependent_authentication = yes"
+            - regexp: "^#?smtpd_sasl_path"
+              line: "smtpd_sasl_path = smtpd"
+            - regexp: "^#?smtpd_sasl_type"
+              line: "smtpd_sasl_type = cyrus"
+            - regexp: "^#?soft_bounce"
+              line: "soft_bounce = no"
+            - regexp: "^#?transport_maps"
+              line: "transport_maps = hash:/etc/postfix/transport"
+            - regexp: "^#?unknown_local_recipient_reject_code"
+              line: "unknown_local_recipient_reject_code = 550"
+            - regexp: "^#?virtual_alias_maps"
+              line: "virtual_alias_maps = hash:/etc/postfix/virtual"
+          notify: Restart postfix
+
+        - name: Ensure virtual file exists
+          ansible.builtin.file:
+            state: touch
+            path: /etc/postfix/virtual
+            owner: root
+            group: root
+            mode: 0600
+            modification_time: preserve
+            access_time: preserve
+          notify:
+            - Regenerate virtual.db
+            - Restart postfix
+
+        - name: Configure postfix transport
+          ansible.builtin.copy:
+            dest: /etc/postfix/transport
+            owner: root
+            group: root
+            mode: 0600
+            content: |
+              {% for d in smtp_relay_domains %}
+              .{{ d.name }}    smtp:[{{ d.relay_host }}]:587
+              {% endfor %}
+          notify:
+            - Regenerate transport.db
+            - Restart postfix
+
+        - name: Configure postfix relayhost_map
+          ansible.builtin.copy:
+            dest: /etc/postfix/relayhost_map
+            owner: root
+            group: root
+            mode: 0600
+            content: |
+              {% for d in smtp_relay_domains %}
+              @{{ d.name }}    [{{ d.relay_host }}]:587
+              {% endfor %}
+          notify:
+            - Regenerate relayhost_map.db
+            - Restart postfix
 
         - name: Configure postfix sasl_password
           ansible.builtin.copy:
@@ -170,12 +244,12 @@
             group: root
             mode: 0600
             content: |
-              [{{ smtp_host }}]:{{ smtp_port }}    {{ smtp_user }}:{{ smtp_pass }}
-          register: sasl_password
-
-        - name: Regenerate sasl_passwd.db
-          ansible.builtin.command: "/usr/sbin/postmap /etc/postfix/sasl_passwd"
-          when: sasl_password.changed
+              {% for d in smtp_relay_domains %}
+              @{{ d.name }}    {{ d.user }}:{{ d.password }}
+              {% endfor %}
+          notify:
+            - Regenerate sasl_passwd.db
+            - Restart postfix
       tags: ["postfix"]
 
   handlers:
@@ -184,3 +258,20 @@
 
     - name: Update locale
       ansible.builtin.command: "/usr/sbin/update-locale LANG={{ system_locale }}"
+
+    - name: Regenerate virtual.db
+      ansible.builtin.command: "/usr/sbin/postmap /etc/postfix/virtual"
+
+    - name: Regenerate transport.db
+      ansible.builtin.command: "/usr/sbin/postmap /etc/postfix/transport"
+
+    - name: Regenerate relayhost_map.db
+      ansible.builtin.command: "/usr/sbin/postmap /etc/postfix/relayhost_map"
+
+    - name: Regenerate sasl_passwd.db
+      ansible.builtin.command: "/usr/sbin/postmap /etc/postfix/sasl_passwd"
+
+    - name: Restart postfix
+      ansible.builtin.systemd:
+        name: postfix
+        state: restarted
