Update drepi smtp config and firewall

--- a/host_vars/drepi/firewall.yml
+++ b/host_vars/drepi/firewall.yml
@@ -2,15 +2,23 @@
 
 firewall_install: true
 
+__smtp_sources:
+  - "10.4.20.0/24"
+  - "{{ home_net | dict2items | json_query('[].value.cidr') }}"
+  - "{{ home_net | dict2items | json_query('[].value.cidr6') }}"
+
 firewall_rules:
   - port: 22
     source: "{{ home_net.general.cidr }}"
 
   - port: 25
-    sources: "{{ home_net | dict2items | json_query('[].value.cidr') }}"
+    sources: "{{ __smtp_sources | flatten }}"
 
-  - port: 25
-    sources: "{{ home_net | dict2items | json_query('[].value.cidr6') }}"
+  - port: 465
+    sources: "{{ __smtp_sources | flatten }}"
+
+  - port: 587
+    sources: "{{ __smtp_sources | flatten }}"
 
   - port: 8081
     source: "{{ home_net.general.cidr }}"
