Add wg_net and replace hard-coded IP addresses

--- a/group_vars/all/network.yml
+++ b/group_vars/all/network.yml
@@ -13,3 +13,8 @@ home_net:
     cidr: "10.0.100.0/24"
     cidr6: "fd00:100::0/64"
     vlan: 100
+
+wg_net:
+  mt:
+    cidr: "10.4.20.0/24"
+    cidr6: "fd00:4:20::0/64"
