--- a/group_vars/loki/firewalld.yml
+++ b/group_vars/loki/firewalld.yml
@@ -7,8 +7,7 @@ firewalld_zones:
     sources: "{{ home_net | dict2items | json_query('[].value.cidr') }}"
 
   - name: internal
-    # Allow wireguard
-    sources: "10.4.20.0/24"
+    sources: "{{ wg_net.mt.cidr }}"
 
   - name: internal
     # Allow prometheus
