--- a/host_vars/drepi/firewall.yml
+++ b/host_vars/drepi/firewall.yml
@@ -3,7 +3,7 @@
 firewall_install: true
 
 __smtp_sources:
-  - "10.4.20.0/24"
+  - "{{ wg_net.mt.cidr }}"
   - "{{ home_net | dict2items | json_query('[].value.cidr') }}"
   - "{{ home_net | dict2items | json_query('[].value.cidr6') }}"
 
