--- a/host_vars/m1bp/wireguard.yml
+++ b/host_vars/m1bp/wireguard.yml
@@ -2,8 +2,8 @@
 
 wireguard_interface: "mt"
 wireguard_addresses:
-  - "10.4.20.34/24"
-  - "fd00:4:20::34/64"
+  - "{{ wg_net.mt.cidr | ansible.utils.ipaddr('34') }}"
+  - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('0x34' | int(base=16)) }}"
 
 wireguard_dns_list:
   - "{{ hostvars['mt-router'].wireguard_ip }}"
