--- a/host_vars/mt-router/wireguard.yml
+++ b/host_vars/mt-router/wireguard.yml
@@ -1,8 +1,8 @@
 ---
 
 wireguard_addresses:
-  - "10.4.20.1/24"
-  - "fd00:4:20::1/64"
+  - "{{ wg_net.mt.cidr | ansible.utils.ipaddr('1') }}"
+  - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('1') }}"
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
 wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
